--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
   "devDependencies": {
     "@nx/cypress": "16.1.4",
     "@nx/eslint-plugin": "16.1.3",
+    "@nx/jest": "16.1.4",
     "@nx/js": "16.1.4",
     "@nx/linter": "16.1.3",
     "@nx/react": "^16.1.4",
     "@nx/vite": "16.1.3",
     "@nx/workspace": "16.1.3",
+    "@swc-node/register": "~1.4.2",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -31,11 +34,16 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~20.0.3",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "16.1.3",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.0.2",
     "vite": "^4.3.4",
     "vite-plugin-dts": "~1.7.1",
@@ -45,12 +53,15 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@nx/devkit": "16.1.4",
+    "@nx/plugin": "^16.1.4",
     "@swc/helpers": "~0.5.0",
     "geolocation-utils": "^1.2.5",
     "ol": "^7.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-tabs": "^6.0.1",
+    "tslib": "^2.3.0",
     "vite-plugin-mkcert": "^1.15.0"
   }
 }
