--- a/packages/plugin-aws-sam/package.json
+++ b/packages/plugin-aws-sam/package.json
@@ -2,5 +2,6 @@
   "name": "@campus-explorer/plugin-aws-sam",
   "version": "0.0.1",
   "type": "commonjs",
-  "generators": "./generators.json"
+  "generators": "./generators.json",
+  "executors": "./executors.json"
 }
