--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
+    "@types/aws-lambda": "latest",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
@@ -57,7 +58,9 @@
     "@nx/plugin": "^16.1.4",
     "@swc/helpers": "~0.5.0",
     "geolocation-utils": "^1.2.5",
+    "js-yaml": "^4.1.0",
     "ol": "^7.3.0",
+    "esbuild": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-tabs": "^6.0.1",
